Removed $(OSNAME) from the package filename.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21800 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/common/Makefile
+++ b/toolchain/common/Makefile
@@ -24,11 +24,10 @@ LIBSIMPLEIO	?= /usr/local/share/libsimpleio
 MUNTSOS		?= ../..
 
 BUILDNUM	?= 1
-OSNAME		?= unknown
 PKGNAME		:= muntsos-common
 PKGVER		:= $(shell date +%Y.%j).$(BUILDNUM)
 PKGARCH		:= all
-PKGDIR		:= $(PKGNAME)-$(PKGVER)-$(OSNAME)-$(PKGARCH)
+PKGDIR		:= $(PKGNAME)-$(PKGVER)-$(PKGARCH)
 PKGFILE		:= $(PKGDIR).deb
 
 include $(LIBSIMPLEIO)/ada/include/ada.mk
