Fix the dependency chain
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21808 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -68,6 +68,7 @@ $(PKGDIR): libaws.a
 	sed -i s/@@ARCH@@/$(PKGARCH)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@VERSION@@/$(PKGVER)/g		$(PKGDIR)/DEBIAN/control
 	sed -i s/@@BOARDNAME@@/$(BOARDBASE)/g		$(PKGDIR)/DEBIAN/control
+	sed -i s/@@TOOLCHAIN_NAME@@/$(TOOLCHAIN_NAME)	$(PKGDIR)/DEBIAN/control
 	mkdir -p					$(PKGDIR)$(LIBDIR)
 	install -cm 0644 src/COPYING			$(PKGDIR)$(LIBDIR)/aws.COPYING
 	install -cm 0644 aws.gpr			$(PKGDIR)$(LIBDIR)
