--- a/toolchain/libsimpleio/control
+++ b/toolchain/libsimpleio/control
@@ -5,6 +5,4 @@ Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
 Description: Linux Simple I/O library for @@TARGET@@
-Depends: munts-libsimpleio, muntsos-common
-Conflicts: @@NAME@@-crosstool
-Replaces: @@NAME@@-crosstool
+Depends: munts-libsimpleio, muntsos-common, @@TOOLCHAIN_NAME@@-libaws
