--- a/toolchain/libs/control
+++ b/toolchain/libs/control
@@ -5,5 +5,4 @@ Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
 Description: GCC cross-toolchain libraries for @@BOARDNAME@@
-Conflicts: @@NAME@@-crosstool
-Replaces: @@NAME@@-crosstool
+Depends: gcc-@@TOOLCHAIN@@
