Fixed dependency chain
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21810 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -125,6 +125,7 @@ package.deb: install.done
 	sed -i s/@@ARCH@@/$(PKGARCH)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@VERSION@@/$(PKGVER)/g		$(PKGDIR)/DEBIAN/control
 	sed -i s/@@BOARDNAME@@/$(BOARDBASE)/g		$(PKGDIR)/DEBIAN/control
+	sed -i s/@@TOOLCHAIN@@/$(TOOLCHAIN_NAME)/g	$(PKGDIR)/DEBIAN/control
 	chmod -R ugo-w					$(PKGDIR)/usr/local/*
 	fakeroot dpkg-deb --build			$(PKGDIR)
 	chmod -R ugo+w					$(PKGDIR)
