--- a/toolchain/libaws/control
+++ b/toolchain/libaws/control
@@ -5,4 +5,4 @@ Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
 Description: GCC cross-toolchain Ada Web Server library for @@BOARDNAME@@
-Depends: @@TOOLCHAIN_NAME@@-libs
+Depends: gcc-@@TOOLCHAIN@@-libs
