Resume building for BeagleBone, RaspberryPi1, RaspberryPi2
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21834 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/metapackages/Makefile
+++ b/toolchain/metapackages/Makefile
@@ -31,17 +31,17 @@ else ifeq ($(TOOLCHAIN_BUILDER), arm-gnu)
 FLAVOR		:= abe
 endif
 
-BOARDNAMES	:= RaspberryPi3
+BOARDNAMES	:= BeagleBone RaspberryPi1 RaspberryPi2 RaspberryPi3
 BOARDNAMELC	:= $(shell echo $(BOARDNAME) | tr A-Z a-z)
 
 PKGVERSION1	:= 9.3
 PKGVERSION2	:= 9.3
 PKGVERSION3	:= 9.3
+PKGVERSION4	:= 9.3
 
 default:
 	$(MAKE) allplatforms
 	for P in $(BOARDNAMES) ; do $(MAKE) oneplatform BOARDNAME=$$P ; done
-	-rm *.buildinfo *.changes
 
 # Build a metapackage for all platforms
 
@@ -51,11 +51,29 @@ allplatforms:
 	equivs-build control.everything
 	rm control.everything
 	mv muntsos-dev_$(PKGVERSION1)_all.deb muntsos-dev-$(PKGVERSION1)-all.deb
+	-rm *.buildinfo *.changes
 
 # Build a metapackage for a single platform
 
 oneplatform:
-ifneq ($(BOARDNAME), RaspberryPi3)
+ifeq ($(BOARDNAME), RaspberryPi1)
+	cp control.template4					control.$(BOARDNAME)
+	sed -i 's/@@BOARDNAME@@/$(BOARDNAME)/g'			control.$(BOARDNAME)
+	sed -i 's/@@BOARDNAMELC@@/$(BOARDNAMELC)/g'		control.$(BOARDNAME)
+	sed -i 's/@@CONFIGURE_NAME@@/$(CONFIGURE_NAME)/g'	control.$(BOARDNAME)
+	sed -i 's/@@VERSION@@/$(PKGVERSION4)/g'			control.$(BOARDNAME)
+	equivs-build						control.$(BOARDNAME)
+	rm							control.$(BOARDNAME)
+	mv muntsos-dev-$(BOARDNAMELC)_$(PKGVERSION4)_all.deb muntsos-dev-$(BOARDNAMELC)-$(PKGVERSION4)-all.deb
+else ifeq ($(BOARDNAME), RaspberryPi3)
+	cp control.template3					control.aarch64
+	sed -i 's/@@CONFIGURE_NAME@@/$(CONFIGURE_NAME)/g'	control.aarch64
+	sed -i 's/@@FLAVOR@@/$(FLAVOR)/g'			control.aarch64
+	sed -i 's/@@VERSION@@/$(PKGVERSION3)/g'			control.aarch64
+	equivs-build						control.aarch64
+	rm							control.aarch64
+	mv muntsos-dev-aarch64_$(PKGVERSION3)_all.deb muntsos-dev-aarch64-$(PKGVERSION3)-all.deb
+else
 	cp control.template2					control.$(BOARDNAME)
 	sed -i 's/@@BOARDNAME@@/$(BOARDNAME)/g'			control.$(BOARDNAME)
 	sed -i 's/@@BOARDNAMELC@@/$(BOARDNAMELC)/g'		control.$(BOARDNAME)
@@ -65,15 +83,8 @@ ifneq ($(BOARDNAME), RaspberryPi3)
 	equivs-build						control.$(BOARDNAME)
 	rm							control.$(BOARDNAME)
 	mv muntsos-dev-$(BOARDNAMELC)_$(PKGVERSION2)_all.deb muntsos-dev-$(BOARDNAMELC)-$(PKGVERSION2)-all.deb
-else
-	cp control.template3					control.aarch64
-	sed -i 's/@@CONFIGURE_NAME@@/$(CONFIGURE_NAME)/g'	control.aarch64
-	sed -i 's/@@FLAVOR@@/$(FLAVOR)/g'			control.aarch64
-	sed -i 's/@@VERSION@@/$(PKGVERSION3)/g'			control.aarch64
-	equivs-build						control.aarch64
-	rm							control.aarch64
-	mv muntsos-dev-aarch64_$(PKGVERSION3)_all.deb muntsos-dev-aarch64-$(PKGVERSION3)-all.deb
 endif
+	-rm *.buildinfo *.changes
 
 # Remove working files
 
