--- a/bootkernel/kernel/RaspberryPi3.config
+++ b/bootkernel/kernel/RaspberryPi3.config
@@ -1296,9 +1296,9 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 CONFIG_NET_VENDOR_MICROCHIP=y
-CONFIG_ENC28J60=y
+CONFIG_ENC28J60=m
 # CONFIG_ENC28J60_WRITEVERIFY is not set
-CONFIG_ENCX24J600=y
+CONFIG_ENCX24J600=m
 # CONFIG_NET_VENDOR_MICROSEMI is not set
 # CONFIG_NET_VENDOR_MICROSOFT is not set
 # CONFIG_NET_VENDOR_NI is not set
@@ -1319,12 +1319,12 @@ CONFIG_ENCX24J600=y
 # CONFIG_NET_VENDOR_VERTEXCOM is not set
 # CONFIG_NET_VENDOR_VIA is not set
 CONFIG_NET_VENDOR_WIZNET=y
-CONFIG_WIZNET_W5100=y
-CONFIG_WIZNET_W5300=y
+CONFIG_WIZNET_W5100=m
+CONFIG_WIZNET_W5300=m
 # CONFIG_WIZNET_BUS_DIRECT is not set
 # CONFIG_WIZNET_BUS_INDIRECT is not set
 CONFIG_WIZNET_BUS_ANY=y
-CONFIG_WIZNET_W5100_SPI=y
+CONFIG_WIZNET_W5100_SPI=m
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_PHYLINK=y
 CONFIG_PHYLIB=y
@@ -1422,7 +1422,7 @@ CONFIG_USB_USBNET=y
 CONFIG_USB_NET_AX8817X=y
 # CONFIG_USB_NET_AX88179_178A is not set
 CONFIG_USB_NET_CDCETHER=y
-CONFIG_USB_NET_CDC_EEM=y
+# CONFIG_USB_NET_CDC_EEM is not set
 # CONFIG_USB_NET_CDC_NCM is not set
 # CONFIG_USB_NET_HUAWEI_CDC_NCM is not set
 # CONFIG_USB_NET_CDC_MBIM is not set
@@ -3867,10 +3867,7 @@ CONFIG_NETFS_STATS=y
 CONFIG_FSCACHE=y
 CONFIG_FSCACHE_STATS=y
 # CONFIG_FSCACHE_DEBUG is not set
-CONFIG_CACHEFILES=y
-# CONFIG_CACHEFILES_DEBUG is not set
-# CONFIG_CACHEFILES_ERROR_INJECTION is not set
-# CONFIG_CACHEFILES_ONDEMAND is not set
+# CONFIG_CACHEFILES is not set
 # end of Caches
 
 #
