--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -1293,9 +1293,9 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 CONFIG_NET_VENDOR_MICROCHIP=y
-CONFIG_ENC28J60=y
+CONFIG_ENC28J60=m
 # CONFIG_ENC28J60_WRITEVERIFY is not set
-CONFIG_ENCX24J600=y
+CONFIG_ENCX24J600=m
 # CONFIG_NET_VENDOR_MICROSEMI is not set
 # CONFIG_NET_VENDOR_MICROSOFT is not set
 # CONFIG_NET_VENDOR_NI is not set
@@ -1316,12 +1316,12 @@ CONFIG_ENCX24J600=y
 # CONFIG_NET_VENDOR_VERTEXCOM is not set
 # CONFIG_NET_VENDOR_VIA is not set
 CONFIG_NET_VENDOR_WIZNET=y
-CONFIG_WIZNET_W5100=y
-CONFIG_WIZNET_W5300=y
+CONFIG_WIZNET_W5100=m
+CONFIG_WIZNET_W5300=m
 # CONFIG_WIZNET_BUS_DIRECT is not set
 # CONFIG_WIZNET_BUS_INDIRECT is not set
 CONFIG_WIZNET_BUS_ANY=y
-CONFIG_WIZNET_W5100_SPI=y
+CONFIG_WIZNET_W5100_SPI=m
 # CONFIG_NET_VENDOR_XILINX is not set
 # CONFIG_PHYLIB is not set
 # CONFIG_MICREL_KS8995MA is not set
@@ -3566,10 +3566,7 @@ CONFIG_NETFS_STATS=y
 CONFIG_FSCACHE=y
 CONFIG_FSCACHE_STATS=y
 # CONFIG_FSCACHE_DEBUG is not set
-CONFIG_CACHEFILES=y
-# CONFIG_CACHEFILES_DEBUG is not set
-# CONFIG_CACHEFILES_ERROR_INJECTION is not set
-# CONFIG_CACHEFILES_ONDEMAND is not set
+# CONFIG_CACHEFILES is not set
 # end of Caches
 
 #
