--- a/bootkernel/kernel/RaspberryPi4.config
+++ b/bootkernel/kernel/RaspberryPi4.config
@@ -1566,12 +1566,12 @@ CONFIG_USB_NET_DRIVERS=y
 CONFIG_USB_PEGASUS=y
 # CONFIG_USB_RTL8150 is not set
 CONFIG_USB_RTL8152=y
-CONFIG_USB_LAN78XX=y
+# CONFIG_USB_LAN78XX is not set
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_AX8817X=y
 # CONFIG_USB_NET_AX88179_178A is not set
 CONFIG_USB_NET_CDCETHER=y
-CONFIG_USB_NET_CDC_EEM=y
+# CONFIG_USB_NET_CDC_EEM is not set
 # CONFIG_USB_NET_CDC_NCM is not set
 # CONFIG_USB_NET_HUAWEI_CDC_NCM is not set
 # CONFIG_USB_NET_CDC_MBIM is not set
