--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -130,11 +130,16 @@ build: $(KERNEL_WORK)/build.done
 # Refresh kernel configuration files
 
 allconfig:
-	$(MAKE) oldconfig reallyclean BOARDNAME=BeagleBone
+	#$(MAKE) oldconfig reallyclean BOARDNAME=BeagleBone
+	#$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi1
+	#$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi1Gadget
+	#$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi2
+	#$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi2Gadget
 	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi3
 	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi3Gadget
 	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi4
 	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi4Gadget
+	$(MAKE) oldconfig reallyclean BOARDNAME=RaspberryPi5
 
 ###############################################################################
 
