--- a/bootkernel/kernel/RaspberryPi4.config
+++ b/bootkernel/kernel/RaspberryPi4.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.72 Kernel Configuration
+# Linux/arm64 6.1.73 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-muntsos-linux-gnu-gcc (crosstool-NG 1.26.0) 13.2.0"
 CONFIG_CC_IS_GCC=y
@@ -1565,7 +1565,7 @@ CONFIG_USB_NET_DRIVERS=y
 # CONFIG_USB_KAWETH is not set
 CONFIG_USB_PEGASUS=y
 # CONFIG_USB_RTL8150 is not set
-CONFIG_USB_RTL8152=y
+# CONFIG_USB_RTL8152 is not set
 # CONFIG_USB_LAN78XX is not set
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_AX8817X=y
