--- a/toolchain/rpms/libsimpleio-common/specfile.template
+++ b/toolchain/rpms/libsimpleio-common/specfile.template
@@ -1,6 +1,6 @@
 # Specfile for libsimpleio-common
 
-# Copyright (C)2023, Philip Munts.
+# Copyright (C)2023-2024, Philip Munts dba Munts Technologies.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -23,7 +23,7 @@
 Summary:	Linux Simple I/O Library files for MuntsOS cross-toolchains
 Name:		libsimpleio-common
 Version:	@@VERSION@@
-Release:	1
+Release:	@@BUILDNUM@@
 BuildArch:	noarch
 Group:		Programming
 License:	BSD-1-Clause
