More minor cleanups.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21908 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/rpms/muntsos-dev/specfile.template
+++ b/toolchain/rpms/muntsos-dev/specfile.template
@@ -23,7 +23,7 @@
 Summary:	MuntsOS Embedded Linux cross-toolchain for @@TARGET@@
 Name:		muntsos-dev-@@SUFFIX@@
 Version:	@@VERSION@@
-Release:	1
+Release:	@@BUILDNUM@@
 BuildArch:	x86_64
 Group:		Programming
 License:	Mixed
